# tp-prog-funcional

./: .env.example  .gitignore  README.md  tp-arbitraje.cabal
app/: Main.hs
src/Binance/API/: Auth.hs  Client.hs  Conversion.hs  Endpoints.hs  Instance.hs  Types.hs
src/Bot/: Arbitraje.hs  Config.hs  Domain.hs  Runtime.hs
src/Exchange/: AppExchange.hs  Interface.hs
src/FakeExchange/: Control.hs  Instance.hs
src/Notification/: Telegram.hs  Types.hs
